--- a/style.css
+++ b/style.css
@@ -41,3 +41,13 @@ body{
 #campo-senha:focus{
     outline: none;
 }
+.parametro{
+    background-color: var(--fundo-texto);
+    border: 2px solid var(--branco);
+    margin-top: 32px;
+    padding: 24px;
+}
+.parametro-titulo{
+    font-family: var(--roboto-mono);
+    font-size: 28px;
+}
